css/styles.css
/* ... */
.bg-header {
    position: absolute;
    width: 100%;
    height: 1620px;
    background-image: url(../assets/illustrations/bgHeader.svg);
    background-repeat: no-repeat;
    background-size: cover;
}

@media screen and (min-width:768px) {
    .bg-header {
        height: 1080px;
        background-position: center;
    }
}

@media screen and (min-width:1400px) {
    .bg-header {
        background-position: bottom;
    }
}

/* PORTRAIT */
.portrait {
    display: grid;
    justify-items: center;
    align-items: center;
    gap: 2rem;
    padding: 5rem 1rem;
    margin: 0 auto;
}

.portrait-text {
    display: grid;
    justify-items: center;
}

.presentation {
    text-align: center;
    font-size: 2.5rem;
    margin: 2rem 0;
}

@media screen and (min-width: 600px) {
    .presentation {
        font-size: 3rem;
    }
}

@media screen and (min-width: 768px) {
    .portrait {
        grid-template-columns: repeat(2, 1fr);
        gap: 0rem;
        margin: 4rem auto;
    }

    .portrait-text {
        justify-items: left;
    }

    .presentation {
        text-align: left;
    }
}

.btns-presentacion .btn {
    width: fit-content;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: .5rem;
    margin: 0 0 1rem 0;
    padding: .5rem 1.5rem;
    transition: 250ms linear;
}

.btn-cv {
    background-color: var(--purpleDark);
    color: var(--bg-color);
    outline: 1px solid var(--purpleDark);
}

.btn-cv:hover {
    outline: 1px solid var(--bg-color);
    color: var(--white);
}

.social-buttons {
    display: flex;
    align-items: center;
    gap: 1rem;
}

.social-buttons>a {
    transition: 250ms linear;
}

.social-buttons>a:hover {
    opacity: .7;
}

.content-profile {
    display: flex;
    justify-content: center;
}

.profile-photo {
    width: 160px;
    height: 230px;
    background-image: url("../assets/img/profile.webp");
    background-repeat: no-repeat;
    background-size: 100%;
    position: relative;
}

.btn-contact {
    background-color: var(--yellow);
    padding: .5rem;
    box-shadow: var(--sombraBtn);
    position: absolute;
    top: 20px;
    right: -30px;
    display: flex;
    justify-content: center;
    align-items: center;
    rotate: 5deg;
    transition: 250ms linear;
}

.btn-contact:hover {
    transform: scale(105%);
}

.profile-salute {
    background-color: var(--greenSpan);
    position: absolute;
    padding: .4rem .5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    bottom: 80px;
    left: -25px;
    box-shadow: var(--sombraBtn);
    rotate: -5deg;
}

.profile-info {
    width: 140px;
    background-color: var(--black);
    color: var(--white);
    padding: .5rem 1rem;
    position: absolute;
    bottom: -30px;
    left: 60px;
    box-shadow: var(--sombraBtn);
}

.info-nickname {
    display: flex;
    align-items: center;
    gap: .8rem;
}

.info-level {
    opacity: .5;
    font-size: .7rem;
    padding: 0 0 .3rem 0;
}

.info-hashtag {
    font-size: .8rem;
}

/* ABOUT */
.about-me {
    display: grid;
    grid-template-columns: 1fr;
    gap: 3rem;
    justify-items: center;
}

.about-image {
    width: 100%;
    display: flex;
    justify-content: center;
}

.about-image>img {
    width: 100%;
    max-width: 350px;
}

.about-span {
    padding: 0 .3rem;
}

.card-about {
    max-width: 450px;
}

@media screen and (min-width: 768px) {
    .about-me {
        grid-template-columns: repeat(2, 1fr);
        align-items: center;
        justify-items: center;
    }

    .card-about {
        justify-self: end;
    }
}

.about-window {
    background-color: var(--black);
    color: var(--white);
    outline: 1px solid var(--grayHard);
    box-shadow: var(--sombra);
}

.window-bar {
    width: 100%;
    display: flex;
    border-bottom: 1px solid var(--grayHard);
}

.bar-buttons,
.bar-title {
    padding: .6rem 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

.bar-title {
    font-size: .8rem;
    opacity: .6;
    border-left: 1px solid var(--grayHard);
    border-right: 1px solid var(--grayHard);
}

.b-btn {
    display: inline-block;
    background-color: #fff;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    margin: 0 .2rem;
}

.red {
    background-color: var(--red);
}

.yellow {
    background-color: var(--yellow);
}

.green {
    background-color: var(--green);
}

.window-content {
    display: flex;
}

.content-sidebar {
    padding: 0 .5rem;
    border-right: 1px solid var(--grayHard);
}

.content-text {
    padding: 1rem 0;
}

.content-parraf {
    background-color: var(--blackMedium);
    text-align: left;
    padding: .3rem .8rem;
    letter-spacing: 1px;
    line-height: 1.5rem;
    font-size: 14px;
}

.content-cursor {
    position: absolute;
    right: -4%;
    bottom: -5%;
}

.bg-main {
    background-image: url(../assets/illustrations/bgMain.svg);
    position: absolute;
    top: 1680px;
    width: 100%;
    height: 3000px;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

@media screen and (min-width:768px) {
    .bg-main {
        top: 1220px;
        height: 2120px;
        background-position: top;
    }
}

/* PROJECTS */
.title-proj {
    display: flex;
    align-items: center;
    gap: .5rem;
}

.cards-portaf {
    gap: 7rem;
}

.card-content {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 3rem;
}

.proj-img {
    display: flex;
    width: 100%;
    min-width: 260px;
    box-shadow: var(--sombraCards);
    transition: linear 300ms;
}

.proj-img:hover {
    filter: brightness(.9);
    box-shadow: none;
    scale: 99%;
}

.card-text .txt-title {
    width: fit-content;
    background-color: var(--purpleDark);
    color: var(--white);
    font-size: 1.2rem;
    padding: .4rem 1rem;
}

.card-text .txt-proj {
    background-color: var(--blueLight);
    max-width: 340px;
    line-height: 1.3rem;
    padding: 1rem;
}
/* ... */

